raw/regex-0.1.80@030-compile_one--2017-01-11-19-24-44--5.log
commit 1ca100d0428985f916eea153886762bed3909771
Merge: b27c709 d723e02
Author: bors <bors@rust-lang.org>
Date:   Thu Jan 12 01:01:06 2017 +0000

    Auto merge of #38605 - estebank:fix-38371, r=nikomatsakis
    
    Suggest solutions for `fn foo(&foo: Foo)`
    
    For a given file:
    
    ```rust
    struct Foo {}
    
    fn foo(&foo: Foo) {}
    ```
    
    suggest:
    
    ```
    error[E0308]: mismatched types
     --> file.rs:3:8
      |
    3 | fn foo(&foo: Foo) {}
      |        ^^^^ expected struct `Foo`, found reference
      |
      = note: expected type `Foo`
      = note:    found type `&_`
      = help: did you mean `foo: &Foo`?
    ```
    
    Fix #38371.
rustc 1.15.0-nightly (daf8c1dfc 2016-12-05)
-rwxr-xr-x 1 root root 9432 Dec  6 15:39 /usr/local/bin/rustc
rustc: ./regex-0.1.80@030-compile_one
git apply 030-compile_one.diff
find . -name "*.rs" | xargs touch
git diff
diff --git a/regex-0.1.80/src/compile.rs b/regex-0.1.80/src/compile.rs
index 9db743f..9a32d30 100644
--- a/regex-0.1.80/src/compile.rs
+++ b/regex-0.1.80/src/compile.rs
@@ -137,6 +137,8 @@ impl Compiler {
     }
 
     fn compile_one(mut self, expr: &Expr) -> result::Result<Program, Error> {
+        {} // @030
+
         // If we're compiling a forward DFA and we aren't anchored, then
         // add a `.*?` before the first capture group.
         // Other matching engines handle this by baking the logic into the
RUSTFLAGS="-Z incremental=incr" cargo rustc  -- \
  -Ztime-passes -Zinput-stats -Z incremental-info
makefile:18: recipe for target 'all@030-compile_one' failed
done
